# experiments-2025-lmcs-field-based-FL-baselines

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-dirichlet_areas-3_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-dirichlet_areas-5_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-dirichlet_areas-9_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-3_clients-50-test.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-3_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-5_clients-50-test.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-5_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-9_clients-50-test.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-hard_areas-9_clients-50.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-iid_areas-3_clients-50-test.csv  seed-0_algorithm-fedavg_dataset-EMNIST_partitioning-iid_areas-3_clients-50.csv  seed-0_algorithm-fedavg_dataset-FashionMNIST_partitioning-dirichlet_areas-3_clients-50.csv  seed-0_algorithm-fedavg_dataset-FashionMNIST_partitioning-dirichlet_areas-5_clients-50.csv  seed-0_algorithm-fedavg_dataset-FashionMNIST_partitioning-dirichlet_areas-9_clients-50.csv  seed-0_algorithm-fedavg_dataset-FashionMNIST_partitioning-hard_areas-3_clients-50-test.csv  seed-0_algorithm-fedavg_dataset-FashionMNIST_partitioning-hard_areas-3_clients-50.csv  (+380 more)
docker/: Dockerfile
(+10 files in other folders)
