[tool.poetry]
name = "python-experiments-bootstrap"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torchvision = "^0.20.1"
torch = "^2.5.1"
numpy = "^2.2.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
